--- a/tabletProjectStyles.css
+++ b/tabletProjectStyles.css
@@ -7,6 +7,10 @@
         height: 300px;
     }
 
+    div#jeffpic {
+        height: 30%;
+    }
+
     div#imageChanger {
         display: flex;
         flex-direction: column;
